--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
-@import "~bootstrap/dist/css/bootstrap.min.css";
 html, body { height: 100%; }
-body { margin: 0;font-size: 2rem !important; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0;font-size: 16px !important; font-family: Roboto, "Helvetica Neue", sans-serif; }
+@import "~bootstrap/dist/css/bootstrap.min.css";
