--- a/src/app/invoices/invoice-modal/invoice-modal.component.html
+++ b/src/app/invoices/invoice-modal/invoice-modal.component.html
@@ -1,30 +1,103 @@
 <ng-container class='dialog-container'>
   <mat-dialog-content [formGroup]="invoiceForm">
-    <h1 mat-dialog-title>Item</h1>
+    <h1 mat-dialog-title>Invoice</h1>
+<div class="form-group">
+    <mat-form-field appearance="fill">
+      <mat-label>Choose a date</mat-label>
+      <input matInput [matDatepicker]="picker">
+      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+      <mat-datepicker #picker></mat-datepicker>
+    </mat-form-field>
+  <mat-form-field style="float: right;" appearance="fill">
+      <mat-label>Choose Item</mat-label>
+      <mat-autocomplete #auto="matAutocomplete">
+        <!-- <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
+           {{option}}
+         </mat-option>-->
+      </mat-autocomplete>
+      <input type="text"
+             placeholder="Choose a Item"
+             aria-label="text"
+             matInput
+             [formControl]="itemName"
+             [matAutocomplete]="auto">
+    </mat-form-field>
+  </div>
     <div class="form-group">
       <mat-form-field appearance="fill">
-        <mat-label>Name</mat-label>
-        <input [formControl]="name" matInput>
+        <mat-label>Customer Name</mat-label>
+        <input [formControl]="customerName" matInput>
         <mat-error></mat-error>
       </mat-form-field>
-        <mat-form-field class="m-lg-4" appearance="fill">
+      </div>
+    <div class="form-group">
+        <mat-form-field disabled="true" class="m-lg-2" appearance="fill">
           <mat-label>Price</mat-label>
-          <input matInput [formControl]="price">
+          <input  matInput [formControl]="price">
           <span matSuffix>$</span>
         </mat-form-field>
-    </div>
-    <div class="form-group">
-      <mat-form-field appearance="fill">
-        <mat-label>Category</mat-label>
-        <mat-select></mat-select>
+      <mat-form-field class='col-lg-2' appearance="fill">
+        <mat-label>Quantity</mat-label>
+        <input matInput [formControl]="quantity">
+      </mat-form-field>
+      <mat-form-field class='col-lg-2' appearance="fill">
+        <mat-label>Discount</mat-label>
+        <input matInput  [formControl]="quantity">
       </mat-form-field>
     </div>
     <div class="form-group">
-      <mat-form-field appearance="fill">
+      <mat-form-field class='col-lg-12' appearance="fill">
         <mat-label>Description</mat-label>
         <textarea [formControl]="description" matInput></textarea>
       </mat-form-field>
     </div>
+
+    <div class="form-group">
+      <table class="table table-responsive" mat-table matSort [dataSource]='dataSource'>
+        <ng-container matColumnDef="name">
+          <th mat-header-cell mat-sort-header *matHeaderCellDef> Name </th>
+          <td mat-cell *matCellDef="let item"> {{item.name}} </td>
+        </ng-container>
+        <ng-container matColumnDef="price">
+          <th mat-header-cell mat-sort-header *matHeaderCellDef> price </th>
+          <td mat-cell *matCellDef="let item"> {{item.price}} </td>
+        </ng-container>
+        <ng-container matColumnDef="description">
+          <th mat-header-cell *matHeaderCellDef> Description </th>
+          <td mat-cell *matCellDef="let item"> {{ item.description }}</td>
+        </ng-container>
+        <ng-container matColumnDef="quantity">
+          <th mat-header-cell mat-sort-header *matHeaderCellDef> Quantity </th>
+          <td mat-cell *matCellDef="let item"> {{item.quantity}} </td>
+        </ng-container>
+        <ng-container matColumnDef="discount">
+          <th mat-header-cell mat-sort-header *matHeaderCellDef> Discount </th>
+          <td mat-cell *matCellDef="let item"> {{item.discount}} </td>
+        </ng-container>
+        <ng-container matColumnDef="net">
+          <th mat-header-cell mat-sort-header *matHeaderCellDef> Net </th>
+          <td mat-cell *matCellDef="let item"> {{calculateNet(item.id)}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="edit">
+          <th mat-header-cell *matHeaderCellDef> Edit </th>
+          <td mat-cell *matCellDef="let item"> <button (click)="editItem(item.id)" mat-flat-button color="primary">
+            Edit
+          </button> </td>
+        </ng-container>
+        <ng-container matColumnDef="delete">
+          <th mat-header-cell *matHeaderCellDef> Delete </th>
+          <td mat-cell *matCellDef="let item"> <button mat-flat-button (click)="deleteItem(item.id)" class="btn btn-danger">
+            Delete
+          </button> </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+      <mat-paginator [pageSizeOptions]="[10, 20]" showFirstLastButtons></mat-paginator>
+    </div>
+
   </mat-dialog-content>
   <mat-dialog-actions>
     <button mat-flat-button (click)="save()" color="primary">Save</button>
