--- a/src/app/invoices/invoice-table/invoice-table.component.html
+++ b/src/app/invoices/invoice-table/invoice-table.component.html
@@ -1,4 +1,11 @@
 <div class="container">
+  <mat-form-field appearance="fill">
+    <mat-label>Choose a date</mat-label>
+    <input matInput [matDatepicker]="picker">
+    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+    <mat-datepicker #picker></mat-datepicker>
+  </mat-form-field>
+
   <a mat-flat-button id="open-dialog" color="primary" (click)="openInvoiceDialog()">Add New invoice</a>
   <div class="mat-elevation-z1">
     <table class="table table-responsive" mat-table matSort [dataSource]='dataSource'>
@@ -16,13 +23,13 @@
       </ng-container>
       <ng-container matColumnDef="edit">
         <th mat-header-cell *matHeaderCellDef> Edit </th>
-        <td mat-cell *matCellDef="let invoice"> <button (click)="editinvoice(invoice.id)" mat-flat-button color="primary">
+        <td mat-cell *matCellDef="let invoice"> <button (click)="editInvoice(invoice.id)" mat-flat-button color="primary">
           Edit
         </button> </td>
       </ng-container>
       <ng-container matColumnDef="delete">
         <th mat-header-cell *matHeaderCellDef> Delete </th>
-        <td mat-cell *matCellDef="let invoice"> <button mat-flat-button (click)="deleteinvoice(invoice.id)" class="btn btn-danger">
+        <td mat-cell *matCellDef="let invoice"> <button mat-flat-button (click)="deleteInvoice(invoice.id)" class="btn btn-danger">
           Delete
         </button> </td>
       </ng-container>
