--- a/src/app/items-table/items-table.component.html
+++ b/src/app/items-table/items-table.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <a mat-flat-button id="open-dialog" color="primary" (click)="openItemsDialog()">Add New item</a>
+  <a mat-flat-button id="open-dialog" color="primary" (click)="addNewItem()">Add New item</a>
   <div class="mat-elevation-z1">
     <table class="table table-responsive" mat-table matSort [dataSource]='dataSource'>
       <ng-container matColumnDef="name">
