--- a/src/app/invoice-table/invoice-table.component.html
+++ b/src/app/invoice-table/invoice-table.component.html
@@ -1,34 +1,41 @@
 <div class="container">
   <mat-form-field appearance="fill">
-    <mat-label>Choose a date</mat-label>
-    <input matInput [matDatepicker]="picker">
-    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-    <mat-datepicker #picker></mat-datepicker>
+
+    <mat-label>From: </mat-label>
+    <input matInput [matDatepicker]="fromPicker">
+    <mat-datepicker-toggle matSuffix [for]="fromPicker"></mat-datepicker-toggle>
+    <mat-datepicker #fromPicker></mat-datepicker>
   </mat-form-field>
   <mat-form-field appearance="fill">
-    <mat-label>Choose a date</mat-label>
-    <input matInput [matDatepicker]="picker">
-    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-    <mat-datepicker #picker></mat-datepicker>
+    <mat-label>To: </mat-label>
+    <input matInput [matDatepicker]="toPicker">
+    <mat-datepicker-toggle matSuffix [for]="toPicker"></mat-datepicker-toggle>
+    <mat-datepicker #toPicker></mat-datepicker>
   </mat-form-field>
-  <a mat-flat-button id="open-dialog" color="primary" (click)="openInvoiceDialog()">Add New Invoice</a>
+  <a mat-flat-button id="open-dialog" color="primary" (click)="createInvoice()">Add New Invoice</a>
   <div class="mat-elevation-z1">
     <table class="table table-responsive" mat-table matSort [dataSource]='dataSource'>
       <ng-container matColumnDef="id">
         <th mat-header-cell mat-sort-header *matHeaderCellDef> Ref NO </th>
         <td mat-cell *matCellDef="let invoice"> {{invoice.id}} </td>
       </ng-container>
-      <ng-container matColumnDef="issuedOn">
+      <ng-container matColumnDef="invoiceDate">
         <th mat-header-cell *matHeaderCellDef> Date </th>
-        <td mat-cell *matCellDef="let invoice"> {{ invoice.issuedOn }}</td>
+        <td mat-cell *matCellDef="let invoice"> {{ invoice.invoiceDate }}</td>
       </ng-container>
       <ng-container matColumnDef="customerName">
         <th mat-header-cell *matHeaderCellDef> Customer Name </th>
         <td mat-cell *matCellDef="let invoice"> {{ invoice.customerName }}</td>
       </ng-container>
-      <ng-container matColumnDef="totalPrice">
+      <ng-container matColumnDef="netAmount">
         <th mat-header-cell *matHeaderCellDef> Total </th>
-        <td mat-cell *matCellDef="let invoice"> {{ invoice.totalPrice }}</td>
+        <td mat-cell *matCellDef="let invoice"> {{ invoice.netAmount }}</td>
+      </ng-container>
+      <ng-container matColumnDef="show">
+        <th mat-header-cell *matHeaderCellDef> Show Details </th>
+        <td mat-cell *matCellDef="let invoice"> <button (click)="showDetails(invoice.id)" mat-flat-button color="primary">
+          Show Details
+        </button> </td>
       </ng-container>
       <ng-container matColumnDef="edit">
         <th mat-header-cell *matHeaderCellDef> Edit </th>
