--- a/src/app/invoice-modal/invoice-modal.component.html
+++ b/src/app/invoice-modal/invoice-modal.component.html
@@ -22,7 +22,7 @@
            aria-labelledby="name"
            matInput
            [formControl]="category"
-           (ngModelChange)="updateItemAutocomplete()"
+           (ngModelChange)="updateProductAutocomplete()"
            [matAutocomplete]="auto">
     <mat-autocomplete  #auto="matAutocomplete" [displayWith]="displayName">
       <mat-option  *ngFor="let option of categories$ | async" [value]="option">
@@ -34,17 +34,17 @@
     <mat-divider></mat-divider>
 <div class="form-group mb-lg-4">
     <mat-form-field  appearance="fill">
-      <mat-label>Item Name</mat-label>
+      <mat-label>Product Name</mat-label>
       <input type="text"
              placeholder="Pick one"
              aria-labelledby="name"
              matInput
-             [formControl]="itemName"
+             [formControl]="ProductName"
              (ngModelChange)="fetchPrice()"
 
-             [matAutocomplete]="autoItem">
-      <mat-autocomplete  #autoItem="matAutocomplete" [displayWith]="displayName">
-        <mat-option  *ngFor="let option of items$ | async" [value]="option">
+             [matAutocomplete]="autoProduct">
+      <mat-autocomplete  #autoProduct="matAutocomplete" [displayWith]="displayName">
+        <mat-option  *ngFor="let option of Products$ | async" [value]="option">
           {{option.name}}
         </mat-option>
       </mat-autocomplete>
@@ -62,13 +62,13 @@
       <mat-label>Discount</mat-label>
       <input matInput  [formControl]="discount">
     </mat-form-field>
-    <button mat-flat-button color="primary" (click)="addItem()"><mat-icon>add</mat-icon></button>
+    <button mat-flat-button color="primary" (click)="addProduct()"><mat-icon>add</mat-icon></button>
 </div>
     <div class="form-group">
       <table class="table">
         <thead>
         <th>ID</th>
-        <th>Item Name</th>
+        <th>Product Name</th>
         <th>Quantity</th>
         <th>Price</th>
         <th>Total</th>
@@ -78,14 +78,14 @@
         </thead>
         <tbody>
         <tr *ngFor="let group  of invoiceDetailsControlsList;let i = index" [formGroup]="group">
-          <td><span>{{invoiceItems[i].id}}</span></td>
-          <td><span>{{invoiceItems[i].name}}</span></td>
-          <td><input matInput formControlName="quantity"></td>
-          <td><span>{{invoiceItems[i].price}}</span></td>
-          <td>{{calculateItemTotal(i)}}</td>
+          <td><span>{{invoiceProducts[i]?.product?.id}}</span></td>
+          <td><span>{{invoiceProducts[i]?.product?.name}}</span></td>
+          <td><input matInput (change)="quantityChanged(i)" formControlName="quantity"></td>
+          <td><span>{{invoiceProducts[i].price}}</span></td>
+          <td>{{invoiceProducts[i].totalPrice}}</td>
           <td><input matInput formControlName="discount"></td>
-          <td>{{calculateNet(invoiceItems[i])}}</td>
-          <td><mat-icon (click)="removeItem(i)">delete</mat-icon></td>
+          <td>{{calculateNet(invoiceProducts[i])}}</td>
+          <td><mat-icon (click)="removeProduct(i)">delete</mat-icon></td>
         </tr>
         </tbody>
       </table>
