--- a/src/app/items-table/products-table.component.html
+++ b/src/app/items-table/products-table.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <a mat-flat-button id="open-dialog" color="primary" (click)="addNewItem()">Add New item</a>
+  <a mat-flat-button id="open-dialog" color="primary" (click)="addNewProduct()">Add New item</a>
   <div class="mat-elevation-z1">
     <table class="table table-responsive" mat-table matSort [dataSource]='dataSource'>
       <ng-container matColumnDef="name">
@@ -16,13 +16,13 @@
       </ng-container>
       <ng-container matColumnDef="edit">
         <th mat-header-cell *matHeaderCellDef> Edit </th>
-        <td mat-cell *matCellDef="let item"> <button (click)="editItem(item.id)" mat-flat-button color="primary">
+        <td mat-cell *matCellDef="let item"> <button (click)="editProduct(item.id)" mat-flat-button color="primary">
           Edit
         </button> </td>
       </ng-container>
       <ng-container matColumnDef="delete">
         <th mat-header-cell *matHeaderCellDef> Delete </th>
-        <td mat-cell *matCellDef="let item"> <button mat-flat-button (click)="deleteItem(item.id)" class="btn btn-danger">
+        <td mat-cell *matCellDef="let item"> <button mat-flat-button (click)="deleteProduct(item.id)" class="btn btn-danger">
           Delete
         </button> </td>
       </ng-container>
