--- a/src/app/items-modal/products-modal.component.html
+++ b/src/app/items-modal/products-modal.component.html
@@ -29,12 +29,12 @@
         </mat-autocomplete>
       </mat-form-field>
     </div>
-    <div class="form-group">
+ <!--   <div class="form-group">
       <mat-form-field appearance="fill">
         <mat-label>Description</mat-label>
         <textarea [formControl]="description" matInput></textarea>
       </mat-form-field>
-    </div>
+    </div>-->
   </mat-dialog-content>
   <mat-dialog-actions>
     <button mat-flat-button (click)="save()" color="primary">Save</button>
