--- a/src/app/items-table/products-table.component.html
+++ b/src/app/items-table/products-table.component.html
@@ -1,4 +1,19 @@
 <div class="container">
+  <mat-form-field class="ml-lg-4" appearance="fill">
+    <mat-label>Category</mat-label>
+    <input type="text"
+           placeholder="Pick one"
+           aria-labelledby="name"
+           matInput
+           [formControl]="category"
+           (ngModelChange)="updateProductsList()"
+           [matAutocomplete]="auto">
+    <mat-autocomplete  #auto="matAutocomplete" [displayWith]="displayName">
+      <mat-option  *ngFor="let option of categories$ | async" [value]="option">
+        {{option.name}}
+      </mat-option>
+    </mat-autocomplete>
+  </mat-form-field>
   <a mat-flat-button id="open-dialog" color="primary" (click)="addNewProduct()">Add New item</a>
   <div class="mat-elevation-z1">
     <table class="table table-responsive" mat-table matSort [dataSource]='dataSource'>
