--- a/src/app/invoice-modal/invoice-modal.component.scss
+++ b/src/app/invoice-modal/invoice-modal.component.scss
@@ -5,14 +5,17 @@ mat-form-field {
   width: 100%;
   margin-top: 20px;
 }
-td {
-  vertical-align: text-top;
+th {
+  text-align: left;
+}
+table td{
+  text-align: left;
 }
 table input[MatInput]:disabled {
   color: black;
 }
 table input[matInput] {
-  margin-left: 20px;
+  margin-left: 10px;
 }
 td mat-icon {
   alignment: center;
@@ -20,3 +23,10 @@ td mat-icon {
   cursor: pointer;
 }
 
+
+.error-msg {
+  background: red;
+  color: white;
+  text-align: center;
+  width: 100%;
+}
