--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -15,3 +15,10 @@
   top: 0;
   z-index: 1;
 }
+.mat-list-item.active {
+  background: #673ab7;
+  color: white;
+}
+.mat-side-nav {
+  background: #673ab7;
+}
