--- a/src/app/category-modal/category-modal.component.html
+++ b/src/app/category-modal/category-modal.component.html
@@ -1,24 +1,34 @@
 <ng-container class='dialog-container'>
-  <form  #tb (ngSubmit)="save()" [formGroup]="categoryForm">
+  <form #tb (ngSubmit)="save()" [formGroup]="categoryForm">
 
-  <mat-dialog-content>
-    <h1 mat-dialog-title>Category</h1>
-  <div class="form-group">
-    <mat-form-field appearance="fill">
-      <mat-label>Name</mat-label>
-      <input [formControl]="name" matInput>
-    </mat-form-field>
-  </div>
-    <div class="form-group">
-      <mat-form-field appearance="fill">
-        <mat-label>Description</mat-label>
-        <textarea [formControl]="description" matInput></textarea>
-      </mat-form-field>
-    </div>
-  </mat-dialog-content>
-  <mat-dialog-actions>
-  <button mat-flat-button type='submit' color="primary">Save</button>
-  <button mat-flat-button [disabled]='categoryForm.invalid' color="primary" (click)="close()" [mat-dialog-close]="true">Cancel</button>
-</mat-dialog-actions>
+    <mat-dialog-content>
+      <h1 mat-dialog-title>Category</h1>
+      <div class="form-group">
+        <mat-form-field appearance="fill">
+          <mat-label>Name</mat-label>
+          <input [formControl]="name" matInput>
+        </mat-form-field>
+      </div>
+      <div class="form-group">
+        <mat-form-field appearance="fill">
+          <mat-label>Description</mat-label>
+          <textarea [formControl]="description" matInput></textarea>
+        </mat-form-field>
+      </div>
+      <div class="error-msg" *ngIf="categoryForm.invalid && (categoryForm.dirty || categoryForm.touched)">
+        <span>You have to fill all required fields</span>
+      </div>
+    </mat-dialog-content>
+    <mat-dialog-actions>
+      <button mat-flat-button type='submit' [disabled]='!isLoading && categoryForm.invalid' color="primary">
+        <mat-icon matPrefix *ngIf='!isLoading'>save</mat-icon>
+        <mat-icon>
+          <mat-spinner diameter='20' color="accent" *ngIf="isLoading"></mat-spinner>
+        </mat-icon>Save
+      </button>
+      <button mat-flat-button  color="primary" (click)="close()"
+              [mat-dialog-close]="true">Cancel
+      </button>
+    </mat-dialog-actions>
   </form>
 </ng-container>
