--- a/src/app/category-modal/category-modal.component.scss
+++ b/src/app/category-modal/category-modal.component.scss
@@ -6,3 +6,10 @@ mat-dialog-content {
 mat-form-field {
   width: 100%;
 }
+.error-msg {
+  background: red;
+  color: white;
+  text-align: center;
+  width: 100%;
+  padding: 10px 40px;
+}
