--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,13 +1,13 @@
 <mat-sidenav-container class="sidenav-container">
-  <mat-sidenav #drawer class="sidenav" fixedInViewport
+  <mat-sidenav #drawer class="sidenav"  fixedInViewport
       [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
       [mode]="(isHandset$ | async) ? 'over' : 'side'"
       [opened]="(isHandset$ | async) === false">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item routerLinkActive="active" [routerLink]="['/categories']">Categories</a>
-      <a mat-list-item routerLinkActive="active" [routerLink]="['/items']">Items</a>
-      <a mat-list-item routerLinkActive="active" [routerLink]="['/invoices']">Invoices</a>
+      <mat-list-item [routerLinkActive]="['active']" [routerLink]="['/categories']">Categories</mat-list-item>
+      <mat-list-item [routerLinkActive]="['active']" [routerLink]="['/items']">Items</mat-list-item>
+      <mat-list-item [routerLinkActive]="['active']" [routerLink]="['/invoices']">Invoices</mat-list-item>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
